--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "name": "smartql-sign",
-  "version": "1.0.0",
+  "version": "1.0.0-beta-0",
   "description": "A universal javascript tool for pushing smartql mutations to the blockchain.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepare": "npm run prepare:jsdoc && npm run prepare:prettier",
+    "prepare:jsdoc": "jsdoc-md",
+    "prepare:prettier": "prettier --write readme.md && prettier --write changelog.md",
+    "test": "npm run test:eslint && npm run test:prettier && npm run test:api",
+    "test:api": "coverage-node test/index.test.mjs",
+    "test:eslint": "eslint .",
+    "test:prettier": "prettier -c .",
+    "prepublishOnly": "npm test"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/relocke/smartql-sign.git"
+  },
+  "engines": {
+    "node": ">= 14"
   },
   "keywords": [
     "smartql",
@@ -40,6 +50,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jsdoc-md": "^11.0.2",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "test-director": "^6.0.0"
   }
 }
